<resources>
    <string name="app_name">RunTrackerTest</string>
    <string name="action_settings">Settings</string>
    <string name="started">Started</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">ALtitude</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="new_run">New Run</string>
    <string name="title_activity_run_map">Map</string>
    <string name="map">Map</string>
    <string name="run_start">Run Start</string>
    <string name="run_started_at_format">Run started at %s</string>
    <string name="run_finish">Run Finish</string>
    <string name="run_finished_at_format">Run finished at %s</string>
</resources>
