<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TableRow>

        <TextView
            android:text="@string/started"
            />

        <TextView
            android:id="@+id/fragment_run_startedTexView"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/latitude"
            />

        <TextView
            android:id="@+id/fragment_run_latitudeTexView"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/longitude"
            />

        <TextView
            android:id="@+id/fragment_run_longitudeTexView"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/altitude"
            />

        <TextView
            android:id="@+id/fragment_run_altitudeTexView"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/elapsed_time"
            />

        <TextView
            android:id="@+id/fragment_run_elapsedTimeTextView"
            />
    </TableRow>

    <LinearLayout>

        <Button
            android:id="@+id/fragment_run_startButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"/>

        <Button
            android:id="@+id/fragment_run_stopButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop"/>
        <Button
            android:id="@+id/fragment_run_mapButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map"/>
    </LinearLayout>
</TableLayout>
